tests/paczka1/fuzzy1/74572570.err
Error in line 8: A969 A960 35,1
Error in line 14: A969 A969 91,9
Error in line 22: yed8 S114 17,6
Error in line 16: 26v2vHWusg S114 60,9
